--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
               "config": "./webpack.renderer.config.js",
               "entryPoints": [
                 {
-                  "html": "./src/index.html",
-                  "js": "./src/renderer.js",
+                  "html": "./src/renderer/index.html",
+                  "js": "./src/renderer/renderer.js",
                   "name": "main_window"
                 }
               ]
@@ -71,6 +71,7 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
     "@electron-forge/maker-zip": "^6.0.0-beta.63",
     "@electron-forge/plugin-webpack": "^6.0.0-beta.63",
+    "@svgr/webpack": "^6.2.1",
     "@vercel/webpack-asset-relocator-loader": "^1.7.0",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.6.0",
@@ -79,8 +80,14 @@
     "style-loader": "^3.3.1"
   },
   "dependencies": {
+    "clipboard-event": "^1.5.0",
+    "electron-devtools-installer": "^3.2.0",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
+    "sass": "^1.49.8",
+    "sass-loader": "^12.6.0",
+    "smooth-scrollbar": "^8.7.4"
   }
 }
